src/test/ui/borrowck/two-phase-reservation-sharing-interference-2.migrate2015.stderr
error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-reservation-sharing-interference-2.rs:19:5
   |
LL |     let shared = &v;
   |                  -- immutable borrow occurs here
LL | 
LL |     v.extend(shared);
   |     ^^------^^^^^^^^
   |     | |
   |     | immutable borrow later used by call
   |     mutable borrow occurs here

error[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-reservation-sharing-interference-2.rs:30:5
   |
LL |     v.extend(&v);
   |     ^^------^--^
   |     | |      |
   |     | |      immutable borrow occurs here
   |     | immutable borrow later used by call
   |     mutable borrow occurs here

warning[E0502]: cannot borrow `v` as mutable because it is also borrowed as immutable
  --> $DIR/two-phase-reservation-sharing-interference-2.rs:42:5
   |
LL |     let shared = &v;
   |                  -- immutable borrow occurs here
LL | 
LL |     v.push(shared.len());
   |     ^      ------ immutable borrow later used here
   |     |
   |     mutable borrow occurs here
   |
   = warning: this error has been downgraded to a warning for backwards compatibility with previous releases
   = warning: this represents potential undefined behavior in your code and this warning will become a hard error in the future

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0502`.
